--- a/docs/.obsidian/app.json
+++ b/docs/.obsidian/app.json
@@ -1,3 +1,9 @@
 {
-  "tabSize": 4
+  "tabSize": 4,
+  "pdfExportSettings": {
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
 }
